--- CHANGELOG ---

--- Assimulo-2.9 ---
    * Added option to specify to use the 2-norm in CVode (ticket:401)
    * Added option to set max nonlinear iteration in CVode (ticket:400)
    * Renamed hmax to maxh in LSODAR for consistency (ticket:399)
    * Fixed version checking in setup for numpy (ticket:394)
    * Fixed bug with ncp list and backward integration (ticket:393)
    * Added method to retrieve current order in IDA (ticket:395)

--- Assimulo-2.8 ---
    * Added support for Sundials 2.6 (ticket:382)
    * Added support for sparse Jacobians (together with Sundials) 
      (ticket:383)
    * Added warning about chattering (ticket:387)
    * Added run-time status update (ticket:181)
    * Added option to set max-conv failures (ticket:386)
    * Removed warningen about comparison to None (ticket:381)
    * Update requirement for Cython to 0.18 (ticket:384)

--- Assimulo-2.7 ---
    * Added Python 3 support (ticket:296)
    * Fixed crash with atol as a matrix (ticket:351)
    * Added option for stability detection (ticket:355)
    * Fixed problem with event tolerance (ticket:367)

--- Assimulo-2.6 ---
    * Added version as an attribute (ticket:264)
    * Added more information is Sunials was found or not during install
      (ticket:265)
    * Fixed problem with storing event points (ticket:297)
    * Fixed wrong number of F-Evals in statistics in Radau/Rodas 
      (ticket:331)
    * Fixed problem with event detection in Euler (ticket:332)
    * Improved performance when using LSODAR (ticket:328)

--- Assimulo-2.5 ---
    * Added support for retrieving the last step in CVode (ticket:298)
    * Added support for retrieving the actual step in CVode (ticket:298)
    * Updated the documentation on the examples (ticket:316, ticket:315)
    * Added the name to the problem constructor (ticket:321)
    * Added option for timing a step (ticket:325)
    * Added an option to specify an upper bound on the integration time
      (ticket:289)